--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PrimeiroProjetoAngular</title>
-  <base href="/">
+  <title>Primeiro Projeto Angular</title>
+  <meta name="description" content="Descrição do seu site aqui">
+  <meta name="keywords" content="palavras-chave, relevantes, para, seu, site">
+  <meta name="author" content="Seu Nome">
+  <meta name="robots" content="index, follow"> <!-- Permitir indexação e rastreamento -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://www.seusite.com/"> <!-- URL canônica do seu site -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
